feat(translation): 实现调用百度翻译

--- a/config.json
+++ b/config.json
@@ -1,9 +1,26 @@
 {
     "hotkey": "ctrl+q",
     "apis": {
-        "Google": false,
-        "DeepL": false,
-        "Youdao": true,
-        "Baidu": true
+        "Google": {
+            "enable": false,
+            "key": ""
+        },
+
+        "DeepL": {
+            "enable": false,
+            "key": ""
+        },
+
+        "Youdao": {
+            "enable": false,
+            "appID": "",
+            "secretKey": ""
+        },
+
+        "Baidu": {
+            "enable": true,
+            "appID": "",
+            "secretKey": ""
+        }
     }
 }
