--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pyinstaller>=6.15.0",
     "pyperclip>=1.9.0",
     "pystray>=0.19.5",
+    "requests>=2.32.5",
 ]
 
 [[index]]
